--- a/programmingcheck/query.tablesorter/themes/blue/style.css
+++ b/programmingcheck/query.tablesorter/themes/blue/style.css
@@ -1,7 +1,7 @@
 /* tables */
-* {
-	background:url"background.jpg";
-	}	
+body {
+	background-image: url("background.jpg");
+}	
 table.tablesorter {
 	font-family:arial;
 	background-color: #CDCDCD;
