--- a/cvfabicsp/css/contact.css
+++ b/cvfabicsp/css/contact.css
@@ -1,15 +1,30 @@
-body {
-  font-family: arial;
-  font-size: 12px;
-  color: #666;
+form{
+
 }
-form {
-  width: 50%;
-  background: white;
-  padding: 20px 25px;
-  margin: auto;
-  margin-top: 30px;
-  box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+
+@media screen and (min-width:0px){
+  form {
+    width: 90%;
+    height: 70%;
+    margin-left: 20px;
+    padding: 20px 25px;
+    margin: auto;
+    margin-top: 30px;
+    box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+
+  }
+
+    @media screen and (min-width:800px){
+
+      form {
+        width: 60%;
+        max-width: 700px;
+        /*background: white;*/
+        /*padding: 20px 25px;
+        margin: auto;
+        margin-top: 30px;
+        box-shadow: 0px 1px 2px rgba(0,0,0,0.2);*/
+      }
 }
 form input,
 form textarea {
@@ -20,15 +35,12 @@ form textarea {
   margin-bottom: 15px;
   box-sizing: border-box;
 }
-.contact:first-child {
 
-}
+
 .notallcompleted{
   display: none;
 }
 .user_comment {
-  /*display: flex;
-  align-items: flex-start;*/
   padding-top: 0;
   padding-left: 0;
   height: 140px;
