--- a/cvfabicsp/css/skills.css
+++ b/cvfabicsp/css/skills.css
@@ -6,6 +6,8 @@
 .technologies {
   display: flex;
   justify-content: flex-start;
+  margin-left: 5%;
+
 }
 .technologies div {
   margin-right: 30px;
@@ -20,7 +22,3 @@
   width: 35px;
   height: 35px;
 }
-/*.skillpictures:first-child {
-  text-align: center;
-
-}*/
