--- a/cvfabicsp/css/contact.css
+++ b/cvfabicsp/css/contact.css
@@ -1,31 +1,29 @@
-form{
+.contact{
+  display: none;
+}
 
+form{
+  margin-left: 20px;
+  padding: 20px 25px;
+  margin: auto;
+  margin-top: 30px;
+  box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
 }
 
 @media screen and (min-width:0px){
   form {
     width: 90%;
     height: 70%;
-    margin-left: 20px;
-    padding: 20px 25px;
-    margin: auto;
-    margin-top: 30px;
-    box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
-
   }
+}
 
     @media screen and (min-width:800px){
-
       form {
         width: 60%;
         max-width: 700px;
-        /*background: white;*/
-        /*padding: 20px 25px;
-        margin: auto;
-        margin-top: 30px;
-        box-shadow: 0px 1px 2px rgba(0,0,0,0.2);*/
       }
 }
+
 form input,
 form textarea {
   font: inherit;
