--- a/cvfabicsp/css/style.css
+++ b/cvfabicsp/css/style.css
@@ -1,5 +1,4 @@
 html {
-  /*font-family: 'Glyph', cursive;*/
   height: 100%;
 }
 #portfolio {
@@ -17,23 +16,20 @@ body {
 body:before {
   background-position: 50% 0px;
   z-index: 1;
-  /*opacity: 0.9;*/
   background-position: 50% 0;
 
 }
 
 .tile {
   min-height:95vh;
-  /*display: flex;*/
 }
 .summary {
-  display: none;
+  /*display: none;*/
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /*background-image: url();*/
   background: url("../pictures/city.gif") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -45,9 +41,6 @@ body:before {
   font-size: 55px;
   color: green;
 }
-/*.summary * {
-  z-index: 10;
-}*/
 
 .skills{
   width: 90%;
