--- a/cvfabicsp/css/skills.css
+++ b/cvfabicsp/css/skills.css
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: flex-start;
   padding-left: 5%;
+  margin-right: 10px;
   border-width: 0px 2px 2px 0px;
   border-color: green;
   border-style: solid;
@@ -21,7 +22,7 @@
   display:table-cell;
 }
 h3{
-  
+
 }
 .skillpictures {
   width: 35px;
